--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 </head>
 <body>
 My p5js page....
+<a class="jsbin-embed" href="http://jsbin.com/raguto/embed?html,js,output">JS Bin on jsbin.com</a><script src="http://static.jsbin.com/js/embed.min.js?3.35.12"></script>
 </body>
 </html>
