--- a/augustus-hhs.html
+++ b/augustus-hhs.html
@@ -28,9 +28,115 @@
 				<!-- Any section element inside of this container is displayed as a slide -->
     <div class="slides">
         <section>
-            <h1>Augustus Hawkins</h1>
-            <h3>What matters most</h3><small>Our present reality</small>
+            <h3>Augustus Hawkins</h3>
+
         </section>
+
+        <section>
+
+            <section>
+
+                <h3>What is most challenging at present for us?</h3>
+                <p class="fragment">Collaboration</p>
+                <p class="fragment">...yes, it's hard, done well.</p>
+                <p class="fragment">Really? So, what's new Mr. Nava?</p>
+            </section>
+
+            <section>
+
+                We know collaboration is important, Mr. Nava. Tell us something new...
+                <p class="fragment">So, what is new about how teachers and students should/ought/will collaborate?</p>
+
+                <p class="fragment">The Internet.</p>
+                <p class="fragment">Wow, really Mr. Nava? Are you serious?</p>
+
+
+
+            </section>
+
+            <section>
+                Well, yes, I'm serious, but how is this being done at the highest, and
+                most organized level is the question?
+            </section>
+
+            <section>
+                <h1>?</h1>
+                <p class="fragment">It's being done in cloud assembly line
+                kind of system called....</p>
+                <p class="fragment">Distributive Version Control</p>
+                <p class="fragment">And Git is the best and most popular in the world</p>
+                <p class="fragment">It's king among developers</p>
+            </section>
+            
+            <section>
+                Who uses Git?
+                <img class="fragment" src="img/who-uses-git.png" alt="">
+                
+            </section>
+
+            <section>
+                So, Mr. Nava, really? What does this have to do with us, as techers
+                and students in a public school?
+                <p class="fragment">It's how we are all going to collaborate and work
+                with one another...</p>
+                <p class="fragment">If we are going to collaborate in the process of
+                    creating, building, or solving a problem...</p>
+                <p class="fragment">This is how it will be done...</p>
+            </section>
+
+            <section>
+                So Why dont't we know about it? Or, if you do, why isn't it being
+                used?
+                <p class="fragment">Because it's challenging to use well.</p>
+                <p class="fragment">There is a learing curve that comes with
+                using DVC.
+                </p>
+                <p class="fragment">It will still take years for DVC to be adopted and
+                used in K12</p>
+
+            </section>
+
+            <section>Question: If it's so complex, how do you expect teachers
+                and students to adopt it?
+                <p class="fragment">When people learn complex but effetive systems,
+                they figure out simple and practical ways to use them and share them
+                with others.</p>
+                <p class="fragment">And that's where I'm at with DVC as a teacher.</p>
+
+            </section>
+
+            <section>
+                I'm just hoping that it communicates something
+                about me to you, and that it is decisive in you selecting me
+                to teach here at Augustus.
+                <p class="fragment">So, can I show you biefly how I'd use DVC?</p>
+            </section>
+
+            <section>
+                Pretend for a moment that this is your contribution  to some project you're working with others:
+
+                <p class="fragment"><img src="img/lego-piece.png" alt=""></p>
+            </section>
+
+            <section>
+                And that this is the goal of the project:
+                <img class="fragment" src="img/lego-space-battleship.png" alt="">
+                <p class="fragment">How is something this complex get built,
+                together with others, over the Internet?</p>
+                <p class="fragment">How do you contribute your small piece?
+                    <img src="img/lego-piece.png" alt="">
+                </p>
+            </section>
+
+            <section>
+                Let me show you....
+            </section>
+
+        </section>
+
+
+
+
 
         <section>
 
